test-cases/negative/test_002_incomplete_try.lay
# negative test: incomplete try statement
# expected: error should be thrown

try
  the variable x of type Number is 5


